--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -684,11 +684,15 @@
 	  const matrix = createPiece(nextType);
       drawMatrixToContext(matrix, { x: 1, y: 2 }, nextCtx, false);
 	  //NEXT
+	  nextCtx.save();
+	  
 	  nextCtx.fillStyle = colors[8].col;
 	  nextCtx.font = (0.6 * blockSize)+"px Arial Bold";
 	  nextCtx.textAlign = "left";
 	  nextCtx.textBaseline = "middle";
 	  nextCtx.fillText("NEXT", 0.2 * blockSize, 0.6 * blockSize);
+	  
+	  nextCtx.restore();
     }
 
 	//gestione statistiche
@@ -714,6 +718,8 @@
 	}
 	
 	function drawStatsFG() {
+		statsCtx.save();
+		
 		//STATS
 		statsCtx.fillStyle = colors[8].col;
 		statsCtx.font = (0.6 * blockSize)+"px Arial Bold";
@@ -749,6 +755,8 @@
 		statsCtx.textAlign = "left";
 		statsCtx.textBaseline = "middle";
 		statsCtx.fillText(/*"&#128081; 👑 \u{1F451}"*/ "\u{1F451} → "+statistiche['HIGH'] + " PTS", 1.2 * blockSize, idx * blockSize + 4.6 * blockSize);
+		
+		statsCtx.restore();
 	}
 	
 	function drawStats() {
