--- a/TETRIS-PLAY.html
+++ b/TETRIS-PLAY.html
@@ -439,7 +439,7 @@
 	  ctx.save();
 	  
 	  // riempi con texture
-	  if (patterns) {
+	  if (patterns && patterns[value]) {
 		ctx.fillStyle = patterns[value];
 	  } else {
 		ctx.fillStyle = colors[value].col; // fallback se la texture non è ancora caricata
@@ -1129,4 +1129,5 @@
 	}
   </script>
 </body>
+
 </html>
