--- a/TETRIS-PLAY.html
+++ b/TETRIS-PLAY.html
@@ -410,7 +410,7 @@
 	
 	
 	
-	//blocchi di legno realistici
+	//blocchi con texture
 	const imageSources = [
 		"./res/t_black.png",  	//null==nero
 		"./res/t_red.png",		// I = rosso
@@ -1129,5 +1129,4 @@
 	}
   </script>
 </body>
-
 </html>
