--- a/TETRIS-PLAY.html
+++ b/TETRIS-PLAY.html
@@ -118,7 +118,7 @@
 	  flex: 1;
 	  white-space: nowrap;
 	  touch-action: manipulation; 
-	  background: url(./res/t_black.png) no-repeat center/120%;
+	  background: url(./res/t_black.svg) no-repeat center/110%;
     }
 	
 	.full {
@@ -133,12 +133,12 @@
 		background: #fff;
 		color: #444;
 		border: 1px solid #000;
-		background: url(./res/t_white.png) no-repeat center/120%;
+		background: url(./res/t_white.svg) no-repeat center/110%;
 	}
 	
 	button:active {
       background: #666;
-	  background: url(./res/t_black.png) no-repeat center/120%;
+	  background: url(./res/t_black.svg) no-repeat center/110%;
     }
 	
 	
@@ -179,7 +179,7 @@
 		color: #fff;
 		background: #666;
 		padding: 0px 8px;	
-		background: url(./res/t_white.png) no-repeat center/120%;
+		background: url(./res/t_white.svg) no-repeat center/110%;
 	}
 	.hidden { 
 		display: none !important; 
@@ -412,15 +412,15 @@
 	
 	//blocchi con texture
 	const imageSources = [
-		"./res/t_black.png",  	//null==nero
-		"./res/t_red.png",		// I = rosso
-		"./res/t_yellow.png",	// J = gialla
-		"./res/t_violet.png",	// L = viola
-		"./res/t_blue.png",		// O = blu
-		"./res/t_cyan.png",		// S - azzurro
-		"./res/t_green.png",	// T = verde
-		"./res/t_orange.png",	// Z - arancione
-		"./res/t_white.png"];	//BIANCO
+		"./res/t_black.svg",  	//null==nero
+		"./res/t_red.svg",		// I = rosso
+		"./res/t_yellow.svg",	// J = gialla
+		"./res/t_violet.svg",	// L = viola
+		"./res/t_blue.svg",		// O = blu
+		"./res/t_cyan.svg",		// S - azzurro
+		"./res/t_green.svg",	// T = verde
+		"./res/t_orange.svg",	// Z - arancione
+		"./res/t_white.svg"];	//BIANCO
 	const images = [];
 	const patterns = [];
 	let loadedCount = 0;
