--- a/TETRIS-PLAY.html
+++ b/TETRIS-PLAY.html
@@ -961,7 +961,7 @@
 			document.body.style = '';
 			lastTime = performance.now();//ocho!
 			update(lastTime);
-			startMusic();
+			startMusic(false);
 		}
 	}
 	
@@ -1137,4 +1137,5 @@
 	}
   </script>
 </body>
+
 </html>
